Fixing YouTube embeds
I guess their default code made it too wide, breaking mobile versions of site.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -182,6 +182,12 @@ span.project-subheader {
     
 }
 
+.youtube-handler {
+    aspect-ratio: 16 / 9; 
+    width: 100%;
+    max-width: 1080px;
+}
+
 #h1st {
     margin-top: -30px;
 }
